samples/_failures_safe/1761413662_13490f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ab5f301.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0ab5f301.c:183:5: error: expected expression at end of input
  183 |     free(
      |     ^~~~
./samples/SAFE/__tmp_0ab5f301.c:183:5: error: expected declaration or statement at end of input
